fix: letter-spacing, fonts and other

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -34,7 +34,6 @@ $container-max-widths: (
   xl: 1200px,
 );
 
-
 @import '~bootstrap/scss/bootstrap.scss';
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
@@ -42,9 +41,13 @@ $container-max-widths: (
 
 @font-face {
   font-family: 'Montserrat';
-  font-weight: normal;
-  font-style: normal;
-  src: url("/assets/fonts/Montserrat-Regular.ttf") format('ttf');
+  src: url('~assets/fonts/montserrat-v14-latin-500.eot'); /* IE9 Compat Modes */
+  src: local('Montserrat Medium'), local('Montserrat-Medium'),
+  url('~assets/fonts/montserrat-v14-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('~assets/fonts/montserrat-v14-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+  url('~assets/fonts/montserrat-v14-latin-500.woff') format('woff'), /* Modern Browsers */
+  url('~assets/fonts/montserrat-v14-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('~assets/fonts/montserrat-v14-latin-500.svg#Montserrat') format('svg'); /* Legacy iOS */
 }
 
 html, body {
